--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
 * {
   padding: 0;
   margin: 0;
-  background-color: rgb(180, 188, 188);
 }
-div {
+div{
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 20%;
+  background-color: rgba(80, 148, 148, 0.543);
 }
 .heading {
   display: flex;
@@ -19,9 +20,10 @@ div {
 button {
   padding: 15px 20px;
   font-size: 20px;
+  outline: none;
   border-radius: 5px;
   border: 3px solid rgb(255, 255, 255);
-  background-color: rgba(236, 59, 236, 0.846);
+  background-color: rgba(236, 112, 59, 0.846);
   color: rgb(255, 255, 255);
   cursor: pointer;
   text-transform: uppercase;
