--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ button {
   color: rgb(255, 255, 255);
   cursor: pointer;
   text-transform: uppercase;
+  margin: 10px;
 }
 .Time-Heading{
   font-size: 50px;
@@ -48,4 +49,11 @@ input{
   border-radius: 15px;
   color: rgb(0, 0, 0);
   background-color: rgb(171, 187, 144);
+  margin: 20px;
+}
+.form-heading{
+  margin-top: 20px;
+  font-size: 30px;
+  color: darkblue;
+  text-transform: uppercase;
 }
